[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/Cairo.gd" type="Script" id=1]
[ext_resource path="res://scripts/CairoTilesetGen.gd" type="Script" id=2]
[ext_resource path="res://images/smoke_06.png" type="Texture" id=3]
[ext_resource path="res://scripts/PathingManager.gd" type="Script" id=4]
[ext_resource path="res://meshes/cairo_collision.tres" type="Shape" id=5]
[ext_resource path="res://materials/grid_edges.tres" type="Material" id=6]
[ext_resource path="res://materials/disabled.tres" type="Material" id=7]
[ext_resource path="res://scripts/MonorailMultimesh.gd" type="Script" id=8]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.170213, 0.835106 )
colors = PoolColorArray( 0.61664, 0.67461, 0.934082, 1, 0.334473, 0.334473, 0.334473, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.617045 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 5, 0.1, 5 )
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, -50, 0 )
angular_velocity = 45.0
angular_velocity_random = 0.5
radial_accel = 40.0
radial_accel_random = 0.5
angle = 360.0
angle_random = 1.0
scale = 8.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=6]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=7]
material = SubResource( 6 )

[sub_resource type="CubeMesh" id=8]

[sub_resource type="ConvexPolygonShape" id=9]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="ArrayMesh" id=10]
surfaces/0 = {
"aabb": AABB( 0, 0, 0, 15, 21.95, 13.6603 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 154, 153, 175, 65, 0, 0, 0, 0, 0, 127, 0, 0, 127, 0, 0, 127, 0, 0, 0, 0, 0, 0, 32, 65, 154, 153, 175, 65, 0, 0, 0, 0, 0, 127, 0, 0, 127, 0, 0, 127, 0, 56, 0, 0, 0, 0, 0, 0, 154, 153, 175, 65, 0, 0, 32, 65, 0, 127, 0, 0, 127, 0, 0, 127, 0, 0, 0, 56, 0, 0, 112, 65, 154, 153, 175, 65, 103, 144, 10, 65, 0, 127, 0, 0, 126, 0, 0, 127, 0, 58, 237, 54, 51, 223, 202, 64, 154, 153, 175, 65, 103, 144, 90, 65, 0, 127, 0, 0, 127, 0, 0, 127, 18, 53, 118, 57, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 129, 0, 0, 0, 0, 0, 127, 129, 0, 0, 0, 0, 0, 0, 0, 0, 154, 153, 175, 65, 0, 0, 0, 0, 129, 0, 0, 0, 0, 0, 127, 129, 0, 0, 99, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 65, 129, 0, 0, 0, 0, 0, 127, 129, 0, 56, 0, 0, 0, 0, 0, 0, 154, 153, 175, 65, 0, 0, 0, 0, 129, 0, 0, 0, 0, 0, 127, 129, 0, 0, 99, 60, 0, 0, 0, 0, 154, 153, 175, 65, 0, 0, 32, 65, 129, 0, 0, 0, 0, 0, 127, 129, 0, 56, 99, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 65, 129, 0, 0, 0, 0, 0, 127, 129, 0, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 65, 193, 0, 109, 0, 109, 0, 63, 129, 0, 0, 0, 0, 0, 0, 0, 0, 154, 153, 175, 65, 0, 0, 32, 65, 193, 0, 109, 0, 109, 0, 63, 129, 0, 0, 99, 60, 51, 223, 202, 64, 0, 0, 0, 0, 103, 144, 90, 65, 193, 0, 109, 0, 109, 0, 63, 129, 0, 56, 0, 0, 51, 223, 202, 64, 154, 153, 175, 65, 103, 144, 90, 65, 193, 0, 109, 0, 109, 0, 63, 129, 0, 56, 99, 60, 51, 223, 202, 64, 0, 0, 0, 0, 103, 144, 90, 65, 63, 0, 109, 0, 109, 0, 193, 129, 0, 0, 0, 0, 51, 223, 202, 64, 154, 153, 175, 65, 103, 144, 90, 65, 63, 0, 109, 0, 109, 0, 193, 129, 0, 0, 99, 60, 0, 0, 112, 65, 0, 0, 0, 0, 103, 144, 10, 65, 63, 0, 109, 0, 109, 0, 193, 129, 0, 56, 0, 0, 0, 0, 112, 65, 154, 153, 175, 65, 103, 144, 10, 65, 63, 0, 109, 0, 109, 0, 193, 129, 0, 56, 99, 60, 0, 0, 112, 65, 0, 0, 0, 0, 103, 144, 10, 65, 109, 0, 193, 0, 193, 0, 147, 129, 0, 0, 0, 0, 0, 0, 112, 65, 154, 153, 175, 65, 103, 144, 10, 65, 109, 0, 193, 0, 193, 0, 147, 129, 0, 0, 99, 60, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 0, 0, 109, 0, 193, 0, 193, 0, 147, 129, 0, 56, 0, 0, 0, 0, 32, 65, 154, 153, 175, 65, 0, 0, 0, 0, 109, 0, 193, 0, 193, 0, 147, 129, 0, 56, 99, 60, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 129, 0, 129, 0, 0, 129, 0, 0, 0, 0, 0, 0, 32, 65, 154, 153, 175, 65, 0, 0, 0, 0, 0, 0, 129, 0, 129, 0, 0, 129, 0, 0, 99, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 129, 0, 129, 0, 0, 129, 0, 56, 0, 0, 0, 0, 0, 0, 154, 153, 175, 65, 0, 0, 0, 0, 0, 0, 129, 0, 129, 0, 0, 129, 0, 56, 99, 60 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 2, 0, 1, 0, 3, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 11, 0, 12, 0, 13, 0, 12, 0, 14, 0, 13, 0, 15, 0, 16, 0, 17, 0, 16, 0, 18, 0, 17, 0, 19, 0, 20, 0, 21, 0, 20, 0, 22, 0, 21, 0, 23, 0, 24, 0, 25, 0, 24, 0, 26, 0, 25, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 39,
"material": ExtResource( 7 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 27
}
surfaces/1 = {
"aabb": AABB( 0, 0, 0, 15, 21.95, 13.6603 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 0, 0, 0, 0, 154, 153, 175, 65, 0, 0, 0, 0, 0, 255, 255, 255, 0, 0, 0, 0, 154, 153, 175, 65, 0, 0, 32, 65, 0, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 65, 0, 255, 255, 255, 51, 223, 202, 64, 154, 153, 175, 65, 103, 144, 90, 65, 0, 255, 255, 255, 51, 223, 202, 64, 0, 0, 0, 0, 103, 144, 90, 65, 0, 255, 255, 255, 0, 0, 112, 65, 154, 153, 175, 65, 103, 144, 10, 65, 0, 255, 255, 255, 0, 0, 112, 65, 0, 0, 0, 0, 103, 144, 10, 65, 0, 255, 255, 255, 0, 0, 32, 65, 154, 153, 175, 65, 0, 0, 0, 0, 0, 255, 255, 255, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 1, 0, 2, 0, 0, 0, 3, 0, 3, 0, 2, 0, 2, 0, 4, 0, 3, 0, 5, 0, 5, 0, 4, 0, 4, 0, 6, 0, 5, 0, 7, 0, 7, 0, 6, 0, 6, 0, 8, 0, 7, 0, 9, 0, 9, 0, 8, 0, 8, 0, 1, 0, 9, 0, 0, 0 ),
"blend_shape_data": [  ],
"format": 97545,
"index_count": 30,
"material": ExtResource( 6 ),
"primitive": 1,
"skeleton_aabb": [  ],
"vertex_count": 10
}

[node name="CairoTilesetGen" type="Spatial"]
script = ExtResource( 2 )

[node name="PathingManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Tiles" type="Spatial" parent="."]

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 6, 22, 6 )
emitting = false
amount = 128
lifetime = 0.5
one_shot = true
explosiveness = 0.8
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="DemoPhysics" type="Spatial" parent="."]

[node name="RigidBody" type="RigidBody" parent="DemoPhysics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 146.931, 21, 50.449 )
can_sleep = false

[node name="MeshInstance" type="MeshInstance" parent="DemoPhysics/RigidBody"]
mesh = SubResource( 8 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="DemoPhysics/RigidBody"]
shape = SubResource( 9 )

[node name="RigidBody2" type="RigidBody" parent="DemoPhysics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 146.931, 21, 52.6944 )
can_sleep = false

[node name="MeshInstance" type="MeshInstance" parent="DemoPhysics/RigidBody2"]
mesh = SubResource( 8 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="DemoPhysics/RigidBody2"]
shape = SubResource( 9 )

[node name="RigidBody3" type="RigidBody" parent="DemoPhysics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 146.931, 21, 55.0359 )
can_sleep = false

[node name="MeshInstance" type="MeshInstance" parent="DemoPhysics/RigidBody3"]
mesh = SubResource( 8 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="DemoPhysics/RigidBody3"]
shape = SubResource( 9 )

[node name="RigidBody4" type="RigidBody" parent="DemoPhysics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 146.931, 23, 51.662 )
can_sleep = false

[node name="MeshInstance" type="MeshInstance" parent="DemoPhysics/RigidBody4"]
mesh = SubResource( 8 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="DemoPhysics/RigidBody4"]
shape = SubResource( 9 )

[node name="RigidBody5" type="RigidBody" parent="DemoPhysics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 146.931, 23, 54.0161 )
can_sleep = false

[node name="MeshInstance" type="MeshInstance" parent="DemoPhysics/RigidBody5"]
mesh = SubResource( 8 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="DemoPhysics/RigidBody5"]
shape = SubResource( 9 )

[node name="RigidBody6" type="RigidBody" parent="DemoPhysics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 146.931, 25, 52.8821 )
can_sleep = false

[node name="MeshInstance" type="MeshInstance" parent="DemoPhysics/RigidBody6"]
mesh = SubResource( 8 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="DemoPhysics/RigidBody6"]
shape = SubResource( 9 )

[node name="Cairo" type="MeshInstance" parent="."]
mesh = SubResource( 10 )
material/0 = null
material/1 = null
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Cairo"]
shape = ExtResource( 5 )

[node name="DisabledTileMultimesh" type="MultiMeshInstance" parent="."]

[node name="MonorailCapMultimesh" type="MultiMeshInstance" parent="."]

[node name="MonorailMultimesh" type="MultiMeshInstance" parent="."]
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="MonorailMultimesh"]
